applications/integration/storage/object_data/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      volumes:
      - name: minio-pvc
        persistentVolumeClaim:
          claimName: minio-pvc
      containers:
      - name: minio
        image: minio/minio:RELEASE.2025-01-20T14-49-07Z
        imagePullPolicy: IfNotPresent #Always
        command: [ "/bin/bash" ]
        args: [ "-c", "mkdir -p /data && minio server --address :9000 --console-address :9001 /data" ]
        volumeMounts:
        - name: minio-pvc
          mountPath: '/data'
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
