applications/integration/storage/object_data/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: server
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: console
  selector:
    app: minio
